Fix tests to run with new NPI lookup