@@ -19,6 +19,7 @@ import gov.cms.bfd.model.rif.entities.DMEClaim;
 import gov.cms.bfd.model.rif.entities.DMEClaimLine;
 import gov.cms.bfd.model.rif.npi_fda.NPIData;
 import gov.cms.bfd.model.rif.samples.StaticRifResourceGroup;
+import gov.cms.bfd.server.war.NPIOrgLookup;
 import gov.cms.bfd.server.war.ServerTestUtils;
 import gov.cms.bfd.server.war.commons.CCWUtils;
 import gov.cms.bfd.server.war.commons.ProfileConstants;
@@ -130,6 +131,7 @@ public final class DMEClaimTransformerV2Test {
         new DMEClaimTransformerV2(metricRegistry, fdaDrugCodeDisplayLookup, securityTagManager);
     claim = generateClaim();
     ExplanationOfBenefit genEob = dmeClaimTransformer.transform(claim, false);
+    TransformerUtilsV2.enrichEob(genEob, NPIOrgLookup.createTestNpiOrgLookup());
     IParser parser = fhirContext.newJsonParser();
     String json = parser.encodeResourceToString(genEob);
     eob = parser.parseResource(ExplanationOfBenefit.class, json);
@@ -264,8 +266,9 @@ public final class DMEClaimTransformerV2Test {
         "http://nucc.org/provider-taxonomy",
         member2.getQualification().getCoding().getFirst().getSystem());
     assertEquals(
-        "Orthopaedic Surgery", member2.getQualification().getCoding().getFirst().getDisplay());
-    assertEquals("207X00000X", member2.getQualification().getCoding().get(0).getCode());
+        "Hematology (Pathology) Physician",
+        member2.getQualification().getCoding().getFirst().getDisplay());
+    assertEquals("207ZH0000X", member2.getQualification().getCoding().get(0).getCode());
 
     assertEquals(2, eob.getCareTeam().size());
   }
@@ -295,7 +298,7 @@ public final class DMEClaimTransformerV2Test {
     }
 
     ExplanationOfBenefit genEob = dmeClaimTransformer.transform(loadedClaim, false);
-
+    TransformerUtilsV2.enrichEob(genEob, NPIOrgLookup.createTestNpiOrgLookup());
     // Ensure the extension for PRTCPTNG_IND_CD wasnt added
     // Also the qualification coding should be empty if specialty code is not set
     String prtIndCdUrl =
